fixed padding inside navbar on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@ body[data-scroll-locked]{
 @media (max-width: 640px) {
   body[data-scroll-locked] {
     padding: 0 !important;
-    padding-top: 24px !important;
+    padding-top: 8px !important;
   }
 }
 
